# langtree

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  index.md  make.bat  requirements.txt
docs/examples/: index.md
docs/examples/chat/: guided_openai_chat_examples.ipynb  openai_chat_examples.ipynb
docs/examples/completion/: openai_completion_examples.ipynb
docs/examples/prompting/: guided_prompting_examples.ipynb  prompting_examples.ipynb
docs/intro_examples/: index.md
docs/intro_examples/chat/: guided_openai_chat_examples.ipynb
docs/intro_examples/completion/: guided_openai_completion_examples.ipynb
docs/intro_examples/prompting/: guided_prompting_examples.ipynb
docs/operator_examples/: guided_operators_examples.ipynb  index.md
examples/chat/: openai_chat_examples.py
examples/completion/: openai_completion_examples.py
examples/embeddings/: chroma.py
examples/operators/: operator_examples.py
examples/prompting/: prompting_examples.py
langtree/core/: __init__.py  buffer.py  operator.py  prompt.py  utils.py  vectordb.py
langtree/models/huggingface/: __init__.py  huggingface_adapter.py
langtree/operators/: __init__.py  base_operators.py
langtree/prompting/: __init__.py  message_types.py
langtree/replay_engine/: __init__.py  chain.py  persist.py
langtree/utils/: data.py
tests/: test_langtree.py
tests/core/: test_buffer.py  test_operator.py  test_prompt.py
tests/operators/: test_operators.py
tests/replay_engine/: test_chain.py  test_persistence.py  test_utils.py
(+5 files in other folders)
