[tool.poetry]
name = "langtree"
version = "0.1.1"
description = "A minimalist python library for LLMs. Our mission is to reduce the mental overhead of developers interacting with language models. This perhead required to interact with language models without making you leave your framework of choice."
authors = ["EntropyAI"]
license = "MIT"
readme = "README.md"
include = ["tests/*", "CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.8"
backoff = "^2.2.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
